--- a/src/period1/task2/tanqi/task2_tanqi.html
+++ b/src/period1/task2/tanqi/task2_tanqi.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<header>
-		<img class="logo" src="logo.png"/>
+		<img class="logo" src="images/logo.png"/>
 		<nav>
 			<ul>
 				<li><a href="">导航链接一</a></li>
