--- a/src/period1/task2/tanqi/task2_tanqi.html
+++ b/src/period1/task2/tanqi/task2_tanqi.html
@@ -132,7 +132,7 @@
 			<div>						
 				<label for="sex" class="left text-right">性别：</label>
 				<div class="right">
-					<input type="radio" name="sex" id="male" style="background-color:blue"/>男</input>				
+					<input type="radio" name="sex" id="male" bgcolor="blue"/>男</input>				
 					<input type="radio" name="sex" id="female"/>女</input>
 				</div>
 				<div class="clearfix"></div>
